samples/_failures_safe/1761194168_55afe1_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_3212c3ef.c: In function ‘main’:
./samples/SAFE/__tmp_3212c3ef.c:131: error: expected ‘{’ at end of input
